[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpu-cluster-validation"
version = "1.0.0"
description = "Production GPU cluster acceptance and validation suite"
authors = [{name = "Infrastructure Engineering", email = "infrastructure@company.com"}]
requires-python = ">=3.10"
license = {text = "Proprietary"}

dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "click>=8.0",
    "fastapi>=0.104",
    "uvicorn>=0.24",
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "structlog>=23.0",
    "prometheus-client>=0.18",
    "jinja2>=3.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[project.scripts]
gpu-cluster-validate = "gpu_cluster_validation.cli.main:cli"

[tool.setuptools]
packages = ["gpu_cluster_validation"]
package-dir = {"" = "src"}

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
